# sat-img-utils

./: .gitignore  LICENSE  README.md  explode_aoi.py  pyproject.toml  rasterize_aois.sh  split_aoi.py
scripts/: rasterize_aois.sh  tif_to_png_shard.sh
src/sat_img_utils/: __init__.py
src/sat_img_utils/configs/: __init__.py  constants.py  datasets.py  ds_constants.py
src/sat_img_utils/core/: __init__.py  filters.py  masks.py  transforms.py  utils.py
src/sat_img_utils/datasets/: __init__.py  capella.py  ghsl.py  naip.py  osm_land_poly.py
src/sat_img_utils/geo/: __init__.py  aoi.py  metadata.py  raster.py
src/sat_img_utils/pipelines/: __init__.py  config.py  context.py  patches.py
src/scripts/: add_capella_patch_crs.py  collection.json  generate_capella_patches.py  get_mean_std.py  overlap_report.json  overlaps.json  stac_tile_overlap.py  tiles.txt
tests/test_datasets/: test_ghsl.py
tests/test_pipelines/: out.txt  test_patches.py
tests/test_transforms/: test_capella_sar_transform.py  visualize_sar_transform.py
