[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-img-utils"
version = "0.1.0"
description = "Satellite image utilities for processing and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api",
    "rasterio",
    "numpy",
    "geopandas",
    "shapely",
    "pyproj",
    "psutil",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]
